q_defconfig: compile ft fpr as module.

--- a/arch/arm64/configs/q_defconfig
+++ b/arch/arm64/configs/q_defconfig
@@ -367,6 +367,7 @@ CONFIG_TOUCHSCREEN_EDT_FT5X06=m
 CONFIG_TOUCHSCREEN_STMFTS=m
 CONFIG_TOUCHSCREEN_HIMAX_HX83112B=m
 CONFIG_INPUT_MISC=y
+CONFIG_INPUT_FT_FINGERPRINT=m
 CONFIG_INPUT_PM8941_PWRKEY=y
 CONFIG_INPUT_PM8XXX_VIBRATOR=m
 CONFIG_RMI4_CORE=m
