--- a/arch/arm64/boot/dts/qcom/sm8550-ayaneo-dmg.dts
+++ b/arch/arm64/boot/dts/qcom/sm8550-ayaneo-dmg.dts
@@ -1019,14 +1019,14 @@
 &qupv3_id_1 {
 	status = "okay";
 	/* AYANEO Controller serial interface */
-	uart11: uart@88c000 {
+	uart11: serial@88c000 {
 		compatible = "qcom,geni-uart";
 		reg = <0 0x0088c000 0 0x4000>;
 		clock-names = "se";
 		clocks = <&gcc GCC_QUPV3_WRAP2_S3_CLK>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&qup_uart11_default>;
-		interrupts = <GIC_SPI 585 IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <GIC_SPI 585 IRQ_TYPE_LEVEL_HIGH 0>;
 		interconnects = <&clk_virt MASTER_QUP_CORE_2 QCOM_ICC_TAG_ALWAYS
 						 &clk_virt SLAVE_QUP_CORE_2 QCOM_ICC_TAG_ALWAYS>,
 						<&gem_noc MASTER_APPSS_PROC QCOM_ICC_TAG_ACTIVE_ONLY
