--- a/arch/arm64/configs/q_defconfig
+++ b/arch/arm64/configs/q_defconfig
@@ -36,8 +36,6 @@ CONFIG_KEXEC=y
 CONFIG_KEXEC_FILE=y
 CONFIG_ARCH_QCOM=y
 # CONFIG_HISILICON_ERRATUM_162100801 is not set
-CONFIG_SCHED_MC=y
-CONFIG_SCHED_SMT=y
 CONFIG_NUMA=y
 CONFIG_PARAVIRT=y
 CONFIG_COMPAT=y
@@ -70,6 +68,7 @@ CONFIG_ACPI_APEI_EINJ=y
 CONFIG_ACPI_AGDI=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
+# CONFIG_SCHED_CLUSTER is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
@@ -83,6 +82,7 @@ CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_CMA=y
 CONFIG_NET=y
 CONFIG_PACKET=y
+CONFIG_DIBS=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
@@ -273,6 +273,7 @@ CONFIG_MLX4_EN=m
 CONFIG_MLX5_CORE=m
 CONFIG_MLX5_CORE_EN=y
 CONFIG_QCOM_EMAC=m
+CONFIG_QCOM_PPE=y
 CONFIG_RMNET=m
 CONFIG_R8169=m
 CONFIG_SMC91X=y
@@ -439,6 +440,7 @@ CONFIG_SPI_QCOM_GENI=m
 CONFIG_SPI_SPIDEV=m
 CONFIG_SPMI=y
 CONFIG_PINCTRL_MSM=y
+CONFIG_PINCTRL_GLYMUR=y
 CONFIG_PINCTRL_IPQ5018=y
 CONFIG_PINCTRL_IPQ5332=y
 CONFIG_PINCTRL_IPQ8074=y
@@ -483,6 +485,7 @@ CONFIG_PINCTRL_X1E80100=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_LPASS_LPI=m
 CONFIG_PINCTRL_SC7280_LPASS_LPI=m
+CONFIG_PINCTRL_SDM660_LPASS_LPI=m
 CONFIG_PINCTRL_SM4250_LPASS_LPI=m
 CONFIG_PINCTRL_SM6115_LPASS_LPI=m
 CONFIG_PINCTRL_SM8250_LPASS_LPI=m
@@ -512,14 +515,15 @@ CONFIG_POWER_RESET_SYSCON=y
 CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_NVMEM_REBOOT_MODE=m
+CONFIG_GENERIC_ADC_BATTERY=m
 CONFIG_BATTERY_QCOM_BATTMGR=m
 CONFIG_BATTERY_SBS=m
-CONFIG_BATTERY_BQ27XXX=y
+CONFIG_BATTERY_BQ27XXX=m
 CONFIG_BATTERY_MAX17042=m
 CONFIG_CHARGER_QCOM_SMBB=m
 CONFIG_CHARGER_BQ25890=m
 CONFIG_CHARGER_BQ25980=m
-CONFIG_CHARGER_RK817=m
+CONFIG_CHARGER_CROS_USBPD=m
 CONFIG_CHARGER_QCOM_SMB2=m
 CONFIG_SENSORS_ARM_SCMI=y
 CONFIG_SENSORS_ARM_SCPI=y
@@ -747,6 +751,7 @@ CONFIG_SND_SIMPLE_CARD=m
 CONFIG_SND_AUDIO_GRAPH_CARD=m
 CONFIG_SND_AUDIO_GRAPH_CARD2=m
 CONFIG_SND_AUDIO_GRAPH_CARD2_CUSTOM_SAMPLE=m
+CONFIG_HID_HAPTIC=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_BELKIN=y
@@ -898,6 +903,7 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_EDAC=y
 CONFIG_EDAC_GHES=y
+CONFIG_EDAC_CORTEX_A72=m
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_DS1307=m
 CONFIG_RTC_DRV_HYM8563=m
@@ -930,6 +936,7 @@ CONFIG_DW_EDMA=m
 CONFIG_VFIO=y
 CONFIG_VFIO_PCI=y
 CONFIG_VIRT_DRIVERS=y
+CONFIG_EFI_SECRET=m
 CONFIG_ARM_PKVM_GUEST=y
 CONFIG_ARM_CCA_GUEST=m
 CONFIG_VIRTIO_PCI=y
@@ -1155,12 +1162,14 @@ CONFIG_NVMEM_RMEM=m
 CONFIG_NVMEM_SPMI_SDAM=m
 CONFIG_STM=m
 CONFIG_TEE=y
+CONFIG_OPTEE=m
+CONFIG_OPTEE_INSECURE_LOAD_IMAGE=y
 CONFIG_QCOMTEE=m
 CONFIG_MUX_GPIO=m
 CONFIG_MUX_MMIO=y
-CONFIG_SLIM_QCOM_CTRL=m
 CONFIG_SLIM_QCOM_NGD_CTRL=m
 CONFIG_INTERCONNECT_QCOM=y
+CONFIG_INTERCONNECT_QCOM_GLYMUR=m
 CONFIG_INTERCONNECT_QCOM_OSM_L3=y
 CONFIG_INTERCONNECT_QCOM_QCS615=m
 CONFIG_INTERCONNECT_QCOM_QCS8300=m
@@ -1220,6 +1229,7 @@ CONFIG_CRYPTO_USER=y
 CONFIG_CRYPTO_DES=m
 CONFIG_CRYPTO_ECHAINIV=y
 CONFIG_CRYPTO_BLAKE2B=m
+CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_XXHASH=m
 CONFIG_CRYPTO_DEFLATE=m
